prevent text wrapping in footer bottom

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -54,9 +54,8 @@
 			div {
 				width: 50%;
 				text-align: right;
-
+				white-space: nowrap;
 			}
-
 
 		}
 
